fix suggestions overflow

--- a/css/index.css
+++ b/css/index.css
@@ -384,11 +384,11 @@
 	}
 }
 
-@media (max-width: 700px) {
+/* @media (max-width: 700px) {
 	.suggestions {
 		justify-content: start;
 	}
-}
+} */
 
 @media (max-width: 660px) {
 	.hero-title {
